# toward-finding-meaning-in-ai-art

./: .gitattributes  .gitignore  README.md  lfs-connectivity.lfs-test  plan.md  pyproject.toml
clients/: __init__.py  fal_client.py  gemini_client.py  openrouter_client.py
flux_unzipped/: metadata.json  prompt.txt
flux_unzipped/latents/: step_000.pt  step_001.pt  step_002.pt  step_003.pt  step_004.pt  step_005.pt  step_006.pt  step_007.pt  step_008.pt  step_009.pt  step_010.pt  step_011.pt  step_012.pt  step_013.pt  step_014.pt  step_015.pt  step_016.pt  step_017.pt  step_018.pt  step_019.pt  step_020.pt  step_021.pt  step_022.pt  step_023.pt  step_024.pt  step_025.pt  step_026.pt  step_027.pt  step_028.pt  step_029.pt  step_030.pt  step_031.pt  step_032.pt  step_033.pt  step_034.pt  step_035.pt  step_036.pt  step_037.pt  step_038.pt  step_039.pt  (+10 more)
flux_unzipped/vae_decoded_latents_vast/: manifest.json
hf_image_gen/: README.md  __init__.py  config.py  decode_latents.py  flux_krea_colab_50_denoisings.ipynb  generate_fal_provider.py  generate_flux_krea.py  latent_capture.py  output_paths.py
prod_env/: model_deployments.yaml
scripts/: check_hf_image_gen_dry_run.py  decode_flux_latents.py  fal_schema_scan.py  hf_flux_provider_scan.py  hf_reasoning_scan.py  test_fal_reasoning_models.py
tests/: test_decode_latents.py  test_hf_image_gen_config.py  test_hf_image_gen_latent_capture.py  test_hf_image_gen_outputs.py  test_latent_capture.py  test_output_paths.py
